Realtime data now is first retrieved by stop-div, then only the timestamp is displayed there. The collapse icon is displayed in the data div

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,7 +109,7 @@ ccc.ccc--converted {
 
 .toggle_collapse{
   float:right;
-  margin-right:2%;
+  display:inline;
 }
 
 .toggleCollapseIcon{
@@ -152,8 +152,7 @@ ccc.ccc--converted {
   justify-content: space-between!important;
   cursor: pointer!important;
   border-radius: 4px!important;  
-
-  display:inline-block;
+  display:block;
 }
 
 
